fixed an issue with error messages not showing up properly

--- a/RegisterPage/RegisterPage.css
+++ b/RegisterPage/RegisterPage.css
@@ -85,7 +85,7 @@ select {
   font-weight: bold;
   transition: background-color 0.2s ease;
   border-radius: 5px;
-  margin-top: 10px;
+  margin-top: -5px;
 }
 
 .button:hover {
@@ -95,8 +95,8 @@ select {
 
 .message {
   text-align: center;
-  margin: 0;
-  margin-bottom: 10px;
+  margin: 20px;
+  margin-top: -20px;
 }
 
 .error-message {
